          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { 
          color:#F0F0F0;
          text-align:center }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 2.5
  % Version 2.5
  _DATE
    * Improved article compatability checking
    * Improvements to error handling and crash reporting
    * Edited app name
$ 2.4.2
  % Hotfix 2.4.2
  _22/04/15
    * Fixed a bug causing a dialog box to remain open
$ 2.4.1
  % Hotfix 2.4.1
  _21/04/15
    * Fixed a bug causing app to crash when downloading articles
$ 2.4
  % Version 2.4
  _ 20/04/15
    * Implemented offline Change Log, Readme, and License
    * Improvements to error handling and crash reporting
    * Fixed a bug causing the article loading to fail
$ 2.3
  % Version 2.3
  _ 17/04/15
  * Moved all internet handling functions to async threads for greater efficiency
  * Implemented saving of article list and updates after 1hr.
  * Fixed several bugs and crashes
  * Enabled update cancellations
  * Added "Whats New" popup on launch after app update
  * Added "Open In Browser" Button
$2.2.*
  % Version 2.2.*
  _ 11/03/15
  * Improved filtering of non-compatible articles
  * Fixed bug that caused crashes when an update was requested without internet access
$2.1
  % Version 2.1
  _ 02/03/15
  * Improvements to error handling and crash reporting
$2.0.*
  % Version 2.0.*
  _ 28/02/15
  * Added Preferences to select only feeds users want to view
  * Added comment loading (for articles with comments)
  * Changed all action bar buttons to display icons
  * Fixed several bugs and crashes when loading lots of data
$1.3.*
  % Version 1.3.*
  _ 10/02/15
  * Fixed Timeout crash issue when loading article list
  * Added date to articles loaded from a web link
  * Reduced app size by removed old unused resources