@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/action_bar_share"
-        android:icon="@drawable/ic_action_share"
-        android:showAsAction="always"
-        android:title="@string/action_share" />
-
     <item
         android:id="@+id/action_bar_comment"
         android:icon="@drawable/ic_action_chat"
-        android:showAsAction="ifRoom"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/menu_comments"
         android:visible="false" />
 
     <item
+        android:id="@+id/action_bar_share"
+        android:icon="@drawable/ic_action_share"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/action_share" />
+
+    <item
         android:id="@+id/action_bar_webview"
         android:icon="@drawable/ic_action_web_site"
-        android:showAsAction="ifRoom"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/menu_webview"
         android:visible="true" />
 
