@@ -3,12 +3,12 @@
     <item
         android:id="@+id/action_bar_refresh"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/action_refresh" />
     <item
         android:id="@+id/action_bar_settings"
         android:icon="@drawable/ic_action_settings"
-        android:showAsAction="ifRoom"
+        android:showAsAction="ifRoom|withText"
         android:title="@string/menu_settings" />
 
 </menu>
